--- a/src/emailservice/Dockerfile
+++ b/src/emailservice/Dockerfile
@@ -12,33 +12,21 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-FROM --platform=$BUILDPLATFORM python:3.12.8-alpine@sha256:54bec49592c8455de8d5983d984efff76b6417a6af9b5dcc8d0237bf6ad3bd20 AS base
-
-FROM base AS builder
-
-RUN apk update \
-    && apk add --no-cache g++ linux-headers \
-    && rm -rf /var/cache/apk/*
+FROM --platform=$BUILDPLATFORM cgr.dev/ky-rafaels.example.com/python:3.12.10-dev
 
 # get packages
 COPY requirements.txt .
+USER root
 RUN pip install -r requirements.txt
 
-FROM base
 # Enable unbuffered logging
 ENV PYTHONUNBUFFERED=1
 # Enable Profiler
 ENV ENABLE_PROFILER=1
 
-RUN apk update \
-    && apk add --no-cache libstdc++ \
-    && rm -rf /var/cache/apk/*
-
 WORKDIR /email_server
 
-# Grab packages from builder
-COPY --from=builder /usr/local/lib/python3.12/ /usr/local/lib/python3.12/
-
+USER nonroot
 # Add the application
 COPY . .
 
