moving to chainguard images for go

--- a/src/checkoutservice/Dockerfile
+++ b/src/checkoutservice/Dockerfile
@@ -12,7 +12,8 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-FROM --platform=$BUILDPLATFORM golang:1.23.4-alpine@sha256:c23339199a08b0e12032856908589a6d41a0dab141b8b3b21f156fc571a3f1d3 AS builder
+# FROM --platform=$BUILDPLATFORM golang:1.23.4-alpine@sha256:c23339199a08b0e12032856908589a6d41a0dab141b8b3b21f156fc571a3f1d3 AS builder
+FROM --platform=$BUILDPLATFORM cgr.dev/ky-rafaels.example.com/go:1.23-dev@sha256:f6ce6f03f7bd2374e043bee6edc216f239ac3b74efd37c7c12da07df8664f94a AS builder
 ARG TARGETOS
 ARG TARGETARCH
 WORKDIR /src
@@ -27,7 +28,8 @@ COPY . .
 ARG SKAFFOLD_GO_GCFLAGS
 RUN GOOS=${TARGETOS} GOARCH=${TARGETARCH} CGO_ENABLED=0 go build -gcflags="${SKAFFOLD_GO_GCFLAGS}" -o /checkoutservice .
 
-FROM scratch
+# FROM scratch
+FROM cgr.dev/ky-rafaels.example.com/go:1.23@sha256:6f192e249581dbced5c029bea77d519074c4453f117ed0a49150aeb8f72b4bc5
 
 WORKDIR /src
 COPY --from=builder /checkoutservice /src/checkoutservice
