pulling images from ttl.sh

--- a/kustomize/components/container-images-registry/kustomization.yaml
+++ b/kustomize/components/container-images-registry/kustomization.yaml
@@ -16,26 +16,38 @@ apiVersion: kustomize.config.k8s.io/v1alpha1
 kind: Component
 images:
 - name: us-central1-docker.pkg.dev/google-samples/microservices-demo/adservice
-  newName: CONTAINER_IMAGES_REGISTRY/adservice
+  newName: ttl.sh/adservice
+  newTag: 2h
 - name: us-central1-docker.pkg.dev/google-samples/microservices-demo/cartservice
-  newName: CONTAINER_IMAGES_REGISTRY/cartservice
+  newName: ttl.sh/cartservice
+  newTag: 2h
 - name: us-central1-docker.pkg.dev/google-samples/microservices-demo/checkoutservice
-  newName: CONTAINER_IMAGES_REGISTRY/checkoutservice
+  newName: ttl.sh/checkoutservice
+  newTag: 2h
 - name: us-central1-docker.pkg.dev/google-samples/microservices-demo/currencyservice
-  newName: CONTAINER_IMAGES_REGISTRY/currencyservice
+  newName: ttl.sh/currencyservice
+  newTag: 2h
 - name: us-central1-docker.pkg.dev/google-samples/microservices-demo/emailservice
-  newName: CONTAINER_IMAGES_REGISTRY/emailservice
+  newName: ttl.sh/emailservice
+  newTag: 2h
 - name: us-central1-docker.pkg.dev/google-samples/microservices-demo/frontend
-  newName: CONTAINER_IMAGES_REGISTRY/frontend
+  newName: ttl.sh/frontend
+  newTag: 2h
 - name: us-central1-docker.pkg.dev/google-samples/microservices-demo/loadgenerator
-  newName: CONTAINER_IMAGES_REGISTRY/loadgenerator
+  newName: ttl.sh/loadgenerator
+  newTag: 2h
 - name: us-central1-docker.pkg.dev/google-samples/microservices-demo/paymentservice
-  newName: CONTAINER_IMAGES_REGISTRY/paymentservice
+  newName: ttl.sh/paymentservice
+  newTag: 2h
 - name: us-central1-docker.pkg.dev/google-samples/microservices-demo/productcatalogservice
-  newName: CONTAINER_IMAGES_REGISTRY/productcatalogservice
+  newName: ttl.sh/productcatalogservice
+  newTag: 2h
 - name: us-central1-docker.pkg.dev/google-samples/microservices-demo/recommendationservice
-  newName: CONTAINER_IMAGES_REGISTRY/recommendationservice
+  newName: ttl.sh/recommendationservice
+  newTag: 2h
 - name: us-central1-docker.pkg.dev/google-samples/microservices-demo/shippingservice
-  newName: CONTAINER_IMAGES_REGISTRY/shippingservice
+  newName: ttl.sh/shippingservice
+  newTag: 2h
 - name: redis
-  newName: CONTAINER_IMAGES_REGISTRY/redis
+  newName: ttl.sh/redis
+  newTag: 2h
