--- a/kustomize/kustomization.yaml
+++ b/kustomize/kustomization.yaml
@@ -31,4 +31,4 @@ components:
 # These must be run last and in this order
 # - components/container-images-tag
 # - components/container-images-tag-suffix
-# - components/container-images-registry
+- components/container-images-registry
